# knee-oa-distance-weighted-coral

./: .gitignore  README.md  pyproject.toml
experiments/configs/advanced_cnn/: convnext_tiny.yaml  convnext_tiny_cpu.yaml  convnext_tiny_gpu_debug.yaml  convnext_tiny_multi_smoke.yaml  convnext_tiny_noaug.yaml  efficientnet_b0.yaml  regnety_008.yaml
experiments/configs/foundation/general/: dinov2_set_a.yaml  dinov2_set_ab.yaml  dinov2_set_b.yaml  mambavision_set_a.yaml  mambavision_set_b.yaml  siglip2_base_set_a.yaml  siglip2_base_set_ab.yaml  siglip2_base_set_b.yaml  siglip2_giant_opt_set_a.yaml  siglip2_giant_opt_set_ab.yaml  siglip2_giant_opt_set_b.yaml  siglip2_so400m_naflex_set_a.yaml  siglip2_so400m_naflex_set_ab.yaml  siglip2_so400m_naflex_set_b.yaml  siglip2_so400m_set_a.yaml  siglip2_so400m_set_ab.yaml  siglip2_so400m_set_b.yaml  siglip_set_a.yaml  siglip_set_ab.yaml  siglip_set_ab_smoke.yaml  siglip_set_b.yaml
experiments/configs/foundation/medical/: biomedclip_set_a.yaml  biomedclip_set_ab.yaml  biomedclip_set_b.yaml  biovil_t_set_a.yaml  biovil_t_set_ab.yaml  biovil_t_set_b.yaml  radimagenet_resnet50_set_a.yaml  radimagenet_resnet50_set_ab.yaml  radimagenet_resnet50_set_b.yaml
experiments/configs/stage6/: stage6_siglip2_so400m_naflex_set_a.yaml  stage6_siglip2_so400m_naflex_set_ab.yaml  stage6_siglip2_so400m_naflex_set_b.yaml  stage6_siglip_set_a.yaml  stage6_siglip_set_ab.yaml  stage6_siglip_set_b.yaml  stage6_siglip_set_b_tuned.yaml  stage6_siglip_set_b_tuned_v2.yaml  stage6_siglip_set_b_tuned_v3.yaml
experiments/configs/stage6/ablation/: stage6_siglip2_set_a_baseline.yaml  stage6_siglip2_set_a_costsensitive.yaml  stage6_siglip2_set_a_importance.yaml  stage6_siglip2_set_a_softmax.yaml  stage6_siglip2_set_ab_baseline.yaml  stage6_siglip2_set_ab_costsensitive.yaml  stage6_siglip2_set_ab_importance.yaml  stage6_siglip2_set_ab_softmax.yaml  stage6_siglip2_set_b_baseline.yaml  stage6_siglip2_set_b_costsensitive.yaml  stage6_siglip2_set_b_importance.yaml  stage6_siglip2_set_b_softmax.yaml  stage6_siglip_set_a_baseline.yaml  stage6_siglip_set_a_corn.yaml  stage6_siglip_set_a_costsensitive.yaml  stage6_siglip_set_a_importance.yaml  stage6_siglip_set_a_softmax.yaml  stage6_siglip_set_ab_baseline.yaml  stage6_siglip_set_ab_corn.yaml  stage6_siglip_set_ab_costsensitive.yaml  stage6_siglip_set_ab_importance.yaml  stage6_siglip_set_ab_softmax.yaml  stage6_siglip_set_b_baseline.yaml  stage6_siglip_set_b_corn.yaml  stage6_siglip_set_b_costsensitive.yaml  stage6_siglip_set_b_importance.yaml  stage6_siglip_set_b_softmax.yaml
experiments/configs/stage6/improvements/: stage6_siglip_set_a_extended.yaml  stage6_siglip_set_a_linear.yaml
experiments/configs/vision_transformer/: swin_t.yaml  vit_b16.yaml
scripts/: README.md  aggregate_single_source_baselines.py  analyze_set_b_dedup.py  analyze_set_b_experts.py  clean_set_b_keep_ratio.py  clean_set_b_target_totals.py  cross_domain_evaluation.py  dataset_statistics.py  prefetch_foundation_weights.sh  run_ablation.py  run_baseline_experiment.py  run_softmax_baselines.sh  run_stage5_foundation_training.sh  save_predictions.py  smoke_test_foundation_models.py
src/: __init__.py
src/data/: __init__.py  data_loader.py  feature_extraction.py  preprocessing.py  pytorch_dataset.py
src/evaluation/: __init__.py  cli.py  clinical.py  explainability.py  metrics.py  visualization.py
src/experiments/: __init__.py  baseline_experiments.py  cli.py
src/models/: __init__.py
src/models/baseline/: __init__.py  classical.py  ensemble.py
src/models/custom/: __init__.py
src/models/deep_learning/: __init__.py  advanced_cnn.py  basic_cnn.py  biovil_image.py  foundation_general.py  foundation_medical.py  head_builder.py  transfer_learning.py  vision_transformer.py
src/models/heads/: ordinal.py
src/training/: __init__.py  cli.py  distillation.py  dl_trainer.py
src/training/losses/: __init__.py  focal.py  ordinal.py
src/utils/: __init__.py
tests/: test_smoke.py
